# pre-commit-tools

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .quality-gate.json  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  Dockerfile.test  GitVersion.yml  Makefile  README.md  cliff.toml  guideline-report.html  pyproject.toml  setup.cfg  sonar-project.properties
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/install-project/: action.yml
.github/actions/mypy-check/: action.yml
.github/actions/python-setup/: action.yml
.github/actions/ruff-check/: action.yml
.github/actions/run-tests/: action.yml
.github/actions/sonar-scan/: action.yml
.github/actions/tool-setup/: action.yml
.github/instructions/: frontend_guidelines.instructions.md  hooks.instructions.md  python_guidelines.instructions.md  ruff_compliance.instructions.md  testing.instructions.md  typing.instructions.md
.github/workflows/: ci.yml  enforce-feature-branch.yml  mutation-testing.yml  pre-commit.yml  publish.yml  quality-gate-check.yml  release.yml  secret-scan.yml  sonar.yml
config-tools/: .csslintrc  .hadolint.yaml  .markdownlint.yaml  .yamllint.yaml  bandit.yaml  black.toml  ruff.toml
pre_commit_hooks/: adr_gate.py  console_debug_detection.py  console_log_detection.py  console_table_detection.py  copilot_instructions_duplication.py  coverage_ratchet.py  css_duplicate_property_detection.py  css_unused_variable.py  dead_code_detection.py  debugger_detection.py  django_hardcoded_secret.py  django_no_raw_sql.py  dockerfile_healthcheck.py  dockerfile_multi_stage_check.py  dockerfile_no_latest.py  dockerfile_non_root_user.py  docs_drift_gate.py  env_example_sync.py  env_file_check.py  fastapi_missing_links.py  fastapi_missing_response_model.py  format_dockerfile.py  generate_changelog.py  helm_lint.py  import_no_relative_parent.py  js_syntax_check.py  json_sorter.py  logger_detection.py  makefile_check.py  no_bare_except.py  no_console_warn.py  no_debug_in_settings.py  no_hardcoded_localhost.py  no_print_in_migration.py  no_sync_in_async.py  pprint_detection.py  print_detection.py  pylint-report-html.sh  pylint_report_html.py  python_no_type_ignore.py  (+12 more)
pre_commit_hooks/bash/: print_detection.sh
pre_commit_hooks/python/: format_dockerfile.py  print_detection.py
pre_commit_hooks/python/tools/: pre-commit_tools_class.py  update_readme.py
pre_commit_hooks/tools/: logger.py  pattern_detection.py  pre_commit_tools.py  update_readme.py
scripts/: quality_gate.py
scripts/pre_commit_hooks/bash/: print_detection.sh
scripts/pre_commit_hooks/python/tools/: update_readme.py
tests/: __init__.py  test_adr_gate.py  test_console_hooks.py  test_copilot_instructions_duplication.py  test_css_duplicate_property.py  test_css_unused_variable.py  test_dead_code.py  test_django_hardcoded_secret.py  test_django_hooks_new.py  test_dockerfile_healthcheck.py  test_dockerfile_multi_stage_check.py  test_dockerfile_no_latest.py  test_dockerfile_non_root_user.py  test_docs_drift_gate.py  test_env_example_sync.py  test_env_file_check.py  test_fastapi_missing_links.py  test_format_dockerfile.py  test_generate_changelog.py  test_helm_lint.py  test_js_hooks_new.py  test_js_syntax_check.py  test_json_sorter.py  test_makefile_check.py  test_no_bare_except.py  test_no_hardcoded_localhost.py  test_no_print_in_migration.py  test_pattern_hooks.py  test_python_hooks_new.py  test_python_no_type_ignore.py  test_react_console_error.py  test_react_no_async_in_useeffect.py  test_react_no_inline_styles.py  test_regression_gate.py  test_requirements_sort.py  test_ts_hardcoded_secret.py  test_ts_no_any.py  test_ts_unreachable_code.py  test_unreachable_code.py  test_yaml_sorter.py
