[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre_commit_hooks_tools"
version = "0.0.34"
description = "Pre-commit hooks collection for chrysa projects"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://github.com/chrysa/pre-commit-tools"

[project.scripts]
adr-gate = "pre_commit_hooks.adr_gate:main"
console-debug-detection = "pre_commit_hooks.console_debug_detection:main"
console-log-detection = "pre_commit_hooks.console_log_detection:main"
console-table-detection = "pre_commit_hooks.console_table_detection:main"
format-dockerfile = "pre_commit_hooks.format_dockerfile:main"
print-detection = "pre_commit_hooks.print_detection:main"
pprint-detection = "pre_commit_hooks.pprint_detection:main"
pylint-report-html = "pre_commit_hooks.pylint_report_html:main"
yaml-sorter = "pre_commit_hooks.yaml_sorter:main"
debugger-detection = "pre_commit_hooks.debugger_detection:main"
json-sorter = "pre_commit_hooks.json_sorter:main"
requirements-sort = "pre_commit_hooks.requirements_sort:main"
env-file-check = "pre_commit_hooks.env_file_check:main"
logger-detection = "pre_commit_hooks.logger_detection:main"
unreachable-code-detection = "pre_commit_hooks.unreachable_code_detection:main"
dead-code-detection = "pre_commit_hooks.dead_code_detection:main"
ts-unreachable-code-detection = "pre_commit_hooks.ts_unreachable_code_detection:main"
css-duplicate-property-detection = "pre_commit_hooks.css_duplicate_property_detection:main"
css-unused-variable-detection = "pre_commit_hooks.css_unused_variable:main"
react-console-error-detection = "pre_commit_hooks.react_console_error_detection:main"
no-bare-except-detection = "pre_commit_hooks.no_bare_except:main"
no-print-in-migration = "pre_commit_hooks.no_print_in_migration:main"
django-hardcoded-secret-detection = "pre_commit_hooks.django_hardcoded_secret:main"  # pragma: allowlist secret
dockerfile-no-latest-detection = "pre_commit_hooks.dockerfile_no_latest:main"
env-example-sync = "pre_commit_hooks.env_example_sync:main"
no-console-warn = "pre_commit_hooks.no_console_warn:main"
react-direct-dom = "pre_commit_hooks.react_direct_dom:main"
import-no-relative-parent = "pre_commit_hooks.import_no_relative_parent:main"
no-debug-in-settings = "pre_commit_hooks.no_debug_in_settings:main"
django-no-raw-sql = "pre_commit_hooks.django_no_raw_sql:main"
no-sync-in-async = "pre_commit_hooks.no_sync_in_async:main"
fastapi-missing-response-model = "pre_commit_hooks.fastapi_missing_response_model:main"
js-syntax-check = "pre_commit_hooks.js_syntax_check:main"
ts-hardcoded-secret-detection = "pre_commit_hooks.ts_hardcoded_secret:main"  # pragma: allowlist secret
generate-changelog = "pre_commit_hooks.generate_changelog:main"
regression-gate = "pre_commit_hooks.regression_gate:main"

[project.optional-dependencies]
dead_code = ["vulture>=2.0"]
format_dockerfile = ["dockerfile-parse==2.0.1"]
lint = ["ruff"]
pylint_report = ["pylint==4.0.5", "pylint-report==2.4.2"]
test = ["pytest", "pytest-cov"]
ts_unreachable_code = [
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-typescript>=0.23,<0.24",
]
typecheck = ["mypy", "types-PyYAML"]
yaml = ["PyYAML==6.0.3"]

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]

[tool.coverage.run]
omit = [
    "pre_commit_hooks/pylint_report_html.py",
    "pre_commit_hooks/tools/update_readme.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov-fail-under=85"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "C90",  # mccabe complexity
    "B",    # flake8-bugbear
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "TID",  # flake8-tidy-imports
    "S",    # flake8-bandit (security)
    "FURB", # refurb
    "RUF",  # ruff-specific rules
]
ignore = [
    "E203", # whitespace before ':'
    "S101", # assert used (fine in tests)
    "S603", # subprocess call: check=False
    "S607", # starting a process with a partial executable path
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]  # Test fixtures use names that look like passwords

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.mypy]
cache_dir = "/dev/null"
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_expr = false
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_any_unimported = false
disallow_subclassing_any = false
dump_type_stats = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
no_incremental = false
no_strict_optional = true
pretty = true
python_version = "3.14"
show_absolute_path = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "*"
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_no_return = true

[tool.pylint.main]
fail-under = 9
jobs = 0
max-args = 10
max-line-length = 120
max-module-lines = 300
min-similarity-lines = 4
output-format = "colorized"
persistent = true
reports = true
score = true
suggestion-mode = true
unsafe-load-any-extension = false
py-version = "3.14"
limit-inference-results = 100
load-plugins = [
    "pylint.extensions.check_elif",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.docparams",
    "pylint.extensions.for_any_all",
    "pylint.extensions.set_membership",
    "pylint.extensions.code_style",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.typing",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.mccabe",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
enable = ["use-symbolic-message-instead", "useless-suppression"]

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX", "TODO"]

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
min-similarity-lines = 4
