[metadata]
name = pre_commit_hooks_tools
version = 0.0.34
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrysa/pre-commit-tools
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.12

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    console-debug-detection = pre_commit_hooks.console_debug_detection:main
    console-log-detection = pre_commit_hooks.console_log_detection:main
    console-table-detection = pre_commit_hooks.console_table_detection:main
    format-dockerfile = pre_commit_hooks.format_dockerfile:main [format_dockerfile]
    print-detection = pre_commit_hooks.print_detection:main
    pprint-detection = pre_commit_hooks.pprint_detection:main
    pylint-report-html = pre_commit_hooks.pylint_report_html:main [pylint-report]
    yaml-sorter = pre_commit_hooks.yaml_sorter:main [yaml]
    debugger-detection = pre_commit_hooks.debugger_detection:main
    json-sorter = pre_commit_hooks.json_sorter:main
    requirements-sort = pre_commit_hooks.requirements_sort:main
    env-file-check = pre_commit_hooks.env_file_check:main
    logger-detection = pre_commit_hooks.logger_detection:main
    unreachable-code-detection = pre_commit_hooks.unreachable_code_detection:main
    dead-code-detection = pre_commit_hooks.dead_code_detection:main [dead_code]
    ts-unreachable-code-detection = pre_commit_hooks.ts_unreachable_code_detection:main [ts_unreachable_code]
    css-duplicate-property-detection = pre_commit_hooks.css_duplicate_property_detection:main
    css-unused-variable-detection = pre_commit_hooks.css_unused_variable:main
    react-console-error-detection = pre_commit_hooks.react_console_error_detection:main
    no-bare-except-detection = pre_commit_hooks.no_bare_except:main
    no-print-in-migration = pre_commit_hooks.no_print_in_migration:main
    django-hardcoded-secret-detection = pre_commit_hooks.django_hardcoded_secret:main
    dockerfile-no-latest-detection = pre_commit_hooks.dockerfile_no_latest:main
    env-example-sync = pre_commit_hooks.env_example_sync:main
    no-console-warn = pre_commit_hooks.no_console_warn:main
    react-direct-dom = pre_commit_hooks.react_direct_dom:main
    import-no-relative-parent = pre_commit_hooks.import_no_relative_parent:main
    no-debug-in-settings = pre_commit_hooks.no_debug_in_settings:main
    django-no-raw-sql = pre_commit_hooks.django_no_raw_sql:main
    no-sync-in-async = pre_commit_hooks.no_sync_in_async:main
    fastapi-missing-response-model = pre_commit_hooks.fastapi_missing_response_model:main
    js-syntax-check = pre_commit_hooks.js_syntax_check:main
    ts-hardcoded-secret-detection = pre_commit_hooks.ts_hardcoded_secret:main
    generate-changelog = pre_commit_hooks.generate_changelog:main

[options.extras_require]
dead_code =
    vulture>=2.0
format_dockerfile =
    dockerfile-parse==2.0.1
lint =
    ruff
pylint_report =
    pylint==4.0.5
    pylint-report==2.4.2
test =
    pytest
    pytest-cov
ts_unreachable_code =
    tree-sitter>=0.23,<0.26
    tree-sitter-typescript>=0.23,<0.24
typecheck =
    mypy
yaml =
    PyYAML==6.0.3

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[ruff]
config = config-tools/ruff.toml
mypy_config = ./setup.cfg

[mypy]
cache_dir = /dev/null
check_untyped_defs = True
disallow_any_decorated = False
disallow_any_expr = False
disallow_any_generics = False
disallow_incomplete_defs = True
disallow_any_unimported = False
disallow_subclassing_any = False
dump_type_stats = True
follow_imports = normal
ignore_missing_imports = True
no_implicit_optional = True
no_implicit_reexport = True
no_incremental = False
no_strict_optional = True
pretty = True
python_version = 3.14
show_absolute_path = True
show_column_numbers = True
show_error_codes = True
show_error_context = True
show_traceback = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = False
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-*]
check_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True
warn_no_return = True

[pylint]
fail-under = 9
jobs = 0
max-args = 10
max-line-length = 120
max-module-lines = 300
min-similarity-lines = 4
output-format = colorized
persistent = yes
reports = yes
score = yes
suggestion-mode = yes
ignore-imports = no
ignore = CVS
load-plugins =
    pylint.extensions.check_elif,
    pylint.extensions.bad_builtin,
    pylint.extensions.docparams,
    pylint.extensions.for_any_all,
    pylint.extensions.set_membership,
    pylint.extensions.code_style,
    pylint.extensions.overlapping_exceptions,
    pylint.extensions.typing,
    pylint.extensions.redefined_variable_type,
    pylint.extensions.comparison_placement,
    pylint.extensions.mccabe
unsafe-load-any-extension = no
py-version = 3.14
limit-inference-results = 100

[pylint.FORMAT]
max-line-length = 120

[pylint.MESSAGES CONTROL]
enable =
    use-symbolic-message-instead,
    useless-suppression,

[pylint.MISCELLANEOUS]
notes = FIXME,XXX,TODO

[pylint.SIMILARITIES]
ignore-comments = yes
ignore-docstrings = yes
ignore-imports = yes
ignore-signatures = yes
min-similarity-lines = 4
